## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = python_cryphto.py \
	ceasar.py \
	monoalphabetic.py \
	playfair.py \
	polyalphabetic.py \
	des.py

## Directory where .class files will be installed
python_cryphtodir = $(pythondir)/python_cryphto

python_cryphto_PYTHON = \
	python_cryphto.py
